preparing for lecture

--- a/convergence.ipynb
+++ b/convergence.ipynb
@@ -22,7 +22,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-27T15:14:09.730520Z",
+     "start_time": "2023-11-27T15:14:07.630308Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pymatgen.io.pwscf import PWInput\n",
@@ -87,7 +92,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-27T15:14:11.616531Z",
+     "start_time": "2023-11-27T15:14:09.734747Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load a DTM MXene structure\n",
@@ -100,13 +110,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Modify MXene system as needed by mapping \"Mo\", \"Nb\", or \"C\" to new elements\n",
+    "struct.replace_species({\"Mo\":\"Ti\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-27T15:14:18.541761Z",
+     "start_time": "2023-11-27T15:14:11.619726Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Create an ionic relaxation sim\n",
-    "make_sim(\"relax\", struct,\n",
+    "make_sim(\"vc-relax\", struct,\n",
     "         control={'pseudo_dir':'./',\n",
-    "                  'calculation':'relax',\n",
+    "                  'calculation':'vc-relax',\n",
     "                  'outdir':'./',\n",
     "                  'tstress':True},\n",
-    "         system={'ecutwfc':50})\n",
+    "         system={'ecutwfc':40},\n",
+    "         cell={\"cell_dofree\": \"fixc\"},\n",
+    "         kpoints_grid=[6, 6, 1],)\n",
     "\n",
     "# Run relax simulation\n",
     "run_sim(\"relax\", struct)"
@@ -115,13 +142,63 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "atomate2",
+   "display_name": "Python3 (MatProject)",
    "language": "python",
-   "name": "atomate2"
+   "name": "matproject"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.18"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
