updated class example

--- a/convergence.ipynb
+++ b/convergence.ipynb
@@ -24,14 +24,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-27T15:14:09.730520Z",
-     "start_time": "2023-11-27T15:14:07.630308Z"
+     "end_time": "2023-12-01T14:50:53.082981Z",
+     "start_time": "2023-12-01T14:50:52.471906Z"
     }
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from pymatgen.io.pwscf import PWInput\n",
     "from pymatgen.core import Structure\n",
+    "from qe_functions import get_qe_outputs, get_convergence_plots\n",
     "\n",
     "def make_sim(name,struct,**kwargs):\n",
     "    \"\"\"\n",
@@ -76,7 +78,7 @@
     "    # Set up commands and files\n",
     "    elements = np.unique([site.species.elements[0].symbol for site in struct.sites])\n",
     "    pseudo_arg = \"\".join([f\"-i ./pseudo/pseudo_PAW/{element}.upf \" for element in elements])\n",
-    "    COMMAND = f\"espresso-6.8_pw > {output_file.name}\"\n",
+    "    COMMAND = f\"espresso-7.1_pw > {output_file.name}\"\n",
     "    \n",
     "    # Run simulation (1 node, 1 hour walltime)\n",
     "    !submit -n 1 -w '01:00:00' -e QE_DISABLE_GGA_PBE=0 --runName {name} {COMMAND} {pseudo_arg} -i {input_file.name}"
@@ -94,8 +96,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-27T15:14:11.616531Z",
-     "start_time": "2023-11-27T15:14:09.734747Z"
+     "end_time": "2023-12-01T14:09:17.846568Z",
+     "start_time": "2023-12-01T14:09:17.842565Z"
     }
    },
    "outputs": [],
@@ -107,11 +109,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-01T14:09:23.598021Z",
+     "start_time": "2023-12-01T14:09:23.592402Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Modify MXene system as needed by mapping \"Mo\", \"Nb\", or \"C\" to new elements\n",
-    "struct.replace_species({\"Mo\":\"Ti\"})"
+    "# Modify MXene system as needed by mapping \"Nb\" to your system's inner element\n",
+    "M = \"Nb\" # ENTER ELEMENT HERE\n",
+    "struct.replace_species({\"Nb\":M})"
    ]
   },
   {
@@ -119,25 +127,87 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-27T15:14:18.541761Z",
-     "start_time": "2023-11-27T15:14:11.619726Z"
+     "start_time": "2023-12-01T14:25:14.636Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Create an ionic relaxation sim\n",
-    "make_sim(\"vc-relax\", struct,\n",
+    "# Create a variable cell relaxation simulation\n",
+    "run_identifier = \"vcrelax\"\n",
+    "make_sim(run_identifier, struct,\n",
     "         control={'pseudo_dir':'./',\n",
     "                  'calculation':'vc-relax',\n",
     "                  'outdir':'./',\n",
     "                  'tstress':True},\n",
-    "         system={'ecutwfc':40},\n",
-    "         cell={\"cell_dofree\": \"fixc\"},\n",
-    "         kpoints_grid=[6, 6, 1],)\n",
+    "         system={'ecutwfc':60},\n",
+    "         kpoints_grid=[10, 10, 1],)\n",
     "\n",
     "# Run relax simulation\n",
-    "run_sim(\"relax\", struct)"
+    "run_sim(run_identifier, struct)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check convergence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-01T14:51:05.544373Z",
+     "start_time": "2023-12-01T14:51:05.537392Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Extract outputs using helper function\n",
+    "relax_dict = get_qe_outputs(f'{run_identifier}.stdout')\n",
+    "\n",
+    "# Get a list of all the extracted outputs\n",
+    "[print(k) for k,v in relax_dict.items()];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-01T14:51:17.422904Z",
+     "start_time": "2023-12-01T14:51:17.419414Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Print relaxed structure\n",
+    "relaxed_struct = relax_dict['structures']\n",
+    "print(relaxed_struct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-01T14:51:07.104356Z",
+     "start_time": "2023-12-01T14:51:05.921653Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Check a plot of energy convergence\n",
+    "get_convergence_plots(step_dict=relax_dict,sim_name=run_identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
